--- a/dashboard.html
+++ b/dashboard.html
@@ -17,9 +17,34 @@
       referrerpolicy="no-referrer"
     />
     <!-- Font Awesome CDN End -->
-    <title>Document</title>
+    <title>Dashboard</title>
   </head>
   <body>
-    <div class="app__dashboard"></div>
+    <div class="app__dashboard">
+      <div class="app__dashboard__header">
+        <h2 class="app__dashboard__header__item">PYP Home Task</h2>
+      </div>
+      <div class="app__dashboard__content">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <a href="task-1.html" class="app__dashboard__content__item">
+                <i class="fa-solid fa-folder"></i><span>Task-1</span>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="#" class="app__dashboard__content__item">
+                <i class="fa-solid fa-folder"></i><span>Task-2</span>
+              </a>
+            </div>
+            <div class="col-4">
+              <a href="#" class="app__dashboard__content__item">
+                <i class="fa-solid fa-folder"></i><span>Task-3</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
