feat:task-2 ready

--- a/task-1.html
+++ b/task-1.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Task-1</title>
+    <!-- Custom CSS Link Start -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Custom CSS Link End -->
+    <!-- ------------------- -->
+    <!-- Font Awesome CDN Start -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Font Awesome CDN End -->
+  </head>
+  <body>
+    <div class="task-1">
+      <header class="task-1__header"></header>
+      <section class="task-1__content">
+        <div class="container">
+          <div class="row">
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+            <div class="col-4">
+              <div class="task-1__content__item"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="task-1__footer"></footer>
+    </div>
+  </body>
 </html>
