--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
               </a>
             </div>
             <div class="col-4">
-              <a href="#" class="app__dashboard__content__item">
+              <a href="task-2.html" class="app__dashboard__content__item">
                 <i class="fa-solid fa-folder"></i><span>Task-2</span>
               </a>
             </div>
