--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
               </a>
             </div>
             <div class="col-4">
-              <a href="#" class="app__dashboard__content__item">
+              <a href="task-3.html" class="app__dashboard__content__item">
                 <i class="fa-solid fa-folder"></i><span>Task-3</span>
               </a>
             </div>
